--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="js/index.js" defer></script>
-  <style>
-
-  </style>
+  <link rel="stylesheet" href="css/local-styles.css">
 </head>
 
 <body>
-  <p id="parent">One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into
+  <h1>One-Click Dictionary Word Lookup Tooltips Demo</h1>
+  <label class="switch">
+    <span>Definitions</span>
+    <input id="def-toggle" type="checkbox">
+    <span id="help" class="hidden">Hover over a word to highlight, then click/tap to show definition tooltip.</span>
+  </label>
+  <p id="parent">One morning, when Gregor Samsa woke from troubled dreams, he found himself
+    transformed in his bed into
     a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly,
     slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready
     to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about
