--- a/index.html
+++ b/index.html
@@ -23,19 +23,43 @@
 <body>
   <!--#include virtual="/includes/vanilla-js-word-lookup-header.html"-->
   <main>
-    <h2>One-Click Dictionary Tooltips Demo</h2>
+    <h2>One-Click Dictionary Tooltips Mashup Demo</h2>
     <label class="switch">
-      <span class="defs">Definitions</span>
+      <span class="defs">Definitions</span>&nbsp;
       <input id="def-toggle" type="checkbox">
       <span id="help" class="hidden emph">Hover over a word to highlight, then click/tap to show definition
         tooltip.</span>
     </label>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error minima reprehenderit dignissimos dolorem sequi
-      perferendis praesentium fuga cumque debitis vitae provident in ipsa, voluptas nam fugiat deserunt? Quaerat, iusto
-      sunt?</p>
-    <button class="new-btn">Load new content</button>
+    <p>Choose an API from the options below to load random content, then enable Definitions above to lookup word
+      meanings.</p>
+    <select name="api" id="api-sel" class="sel">
+      <option value="0">Options...</option>
+      <option value="1">Fun facts</option>
+      <option value="2">Useless Facts</option>
+      <option value="3">Quotable Quotes</option>
+      <option value="4">Daily Horoscope</option>
+      <option value="5">Faker Texts</option>
+    </select>
+    <button class="new-btn hidden">Load Content</button>
+    <section style="margin-top:2rem;">
+      This application makes use of the <a href="https://dictionaryapi.dev/">Free Dictionary API</a> to define words.
+      Sample content free no-key API links:<br>
+      <ul>
+        <!-- <li>Inspirational quotes provided by <a href="https://zenquotes.io/" target="_blank">ZenQuotes API</a></li> -->
+        <li>Get more fun facts and biology terms at <a
+            href="https://aakhilv.notion.site/aakhilv/api-aakhilv-me-a57b3dc3e4e2449ba4dcce5ddee1c684"
+            target="_blank">api.aakhilv.me</a></li>
+        <li>Totally useless facts originate <a href="https://uselessfacts.jsph.pl" target="_blank">here</a></li>
+        <li>Quotable quotes provided by <a href="https://github.com/lukePeavey/quotable" target="_blank">Quotable</a>
+        </li>
+        <li>Daily Horoscope courtesy of <a href="https://aztro.sameerkumar.website/" target="_blank">Aztro</a></li>
+        <li>Faker Texts loaded from <a href="https://fakerapi.it/en" target="_blank">Faker API</a></li>
+      </ul>
+      There are mobile device apps that accomplish this functionality, but my goal is to produce a bookmarklet that
+      would enable lookups for any webpage.
+    </section>
   </main>
-  <!--#include virtual="/includes/footer.html"-->
+  <!--#include virtual="/includes/footer.html" -->
 </body>
 
 </html>
