minor style chgs

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </select>
     <button class="new-btn hidden">Load Content</button>
     <section style="margin-top:2rem;">
-      This application makes use of the <a href="https://dictionaryapi.dev/">Free Dictionary API</a> to define words.
-      Sample content free no-key API links:<br>
+      This application makes use of the <a href="https://dictionaryapi.dev/">Free Dictionary API</a> to define words and
+      free no-key APIs for random content:<br>
       <ul>
         <!-- <li>Inspirational quotes provided by <a href="https://zenquotes.io/" target="_blank">ZenQuotes API</a></li> -->
         <li>Get more fun facts and biology terms at <a
