struggling with parsing html

--- a/index-bookmarklet.html
+++ b/index-bookmarklet.html
@@ -25,10 +25,8 @@
     <!--#include virtual="/includes/mashups-word-lookup-header.html"-->
     <main>
         <h2>One-Click Dictionary Tooltips Mashup Demo</h2>
-        <p><a href="f.com">Choose</a> an API <br>from the option's below to load-random content, then enable Definitions
-            above to lookup word<br>
-            meanings. Choose an API from the options below to load random content, then enable Definitions above to
-            lookup word meanings.</p>
+        <p><a href="f.com">Choose</a> an API from the option's below to load-random content, then enable Definitions
+            above to lookup word meanings.</p>
         <p>Choose an API from the options below to load random content, then enable Definitions above to lookup word
             meanings.</p>
         <p>Choose an API from the options below to load random content, then enable Definitions above to lookup word
@@ -41,8 +39,10 @@
             meanings.</p>
         <p>Choose an API from the options below to load random content, then enable Definitions above to lookup word
             meanings.</p>
-        <p>Choose an API from the options below to load random content, then enable Definitions above to lookup word
-            meanings.</p>
+        <p><img src="../assetsNew/img/vegan.png" style="max-width: 35px;padding-right: 15px;">2-3 <span
+                style="background-color: transparent;">Medium Green <span style="background-color: transparent;">Chilies
+        </p>
+        <p></p>
     </main>
     <!--#include virtual="/includes/footer.html" -->
 </body>
