--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://kit.fontawesome.com/6029e1b20c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/global-styles.css">
   <link rel="stylesheet" href="/css/local-styles.css">
-  <link rel="stylesheet" href="css/local-styles.css">
+  <link rel="stylesheet" href="css/local-styles-copy.css">
   <!-- <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch&flags=gated"></script> -->
   <script
     src="https://polyfill.io/v3/polyfill.min.js?features=Element.prototype.classList%2CMediaQueryList.prototype.addEventListener%2Cdocument.querySelector&flags=gated">
