working with p tags

--- a/index-bookmarklet.html
+++ b/index-bookmarklet.html
@@ -25,9 +25,13 @@
     <!--#include virtual="/includes/mashups-word-lookup-header.html"-->
     <main>
         <h2>One-Click Dictionary Tooltips Mashup Demo</h2>
-        <p><a href="f.com">Choose</a> an API from the option's below to load-random content, then enable Definitions
+        <p><a href="f.com">Choose</a> an API from the option's below to "load-random" content, don't then 'enable'
+            Definitions someone's
             above to lookup word meanings.</p>
-        <p>Choose an API from the options below to load random content, then enable Definitions above to lookup word
+        <p>Choose an API from the options below to load random content,&nbsp;then enable Definitions above to "lookup"
+            word
+            meanings.</p>
+        <p>Choose an API from the options below to load random content, then enable Definitions above to lookup word…
             meanings.</p>
         <p>Choose an API from the options below to load random content, then enable Definitions above to lookup word
             meanings.</p>
@@ -37,10 +41,9 @@
             meanings.</p>
         <p>Choose an API from the options below to load random content, then enable Definitions above to lookup word
             meanings.</p>
-        <p>Choose an API from the options below to load random content, then enable Definitions above to lookup word
-            meanings.</p>
-        <p><img src="../assetsNew/img/vegan.png" style="max-width: 35px;padding-right: 15px;">2-3 <span
-                style="background-color: transparent;">Medium Green <span style="background-color: transparent;">Chilies
+        <p><img src="/assets/svgs/1462056837_yelp-square-social-media.svg"
+                style="max-width: 35px;padding-right: 15px;">2-3 <span style="background-color: transparent;">Medium
+                Green <span style="background-color: transparent;">Chilies
         </p>
         <p></p>
     </main>
