--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
   <script src="https://kit.fontawesome.com/6029e1b20c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/global-styles.css">
   <link rel="stylesheet" href="/css/local-styles.css">
-  <link rel="stylesheet" href="css/local-styles-copy.css">
-  <!-- <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch&flags=gated"></script> -->
+  <link rel="stylesheet" href="css/local-styles.css">
   <script
-    src="https://polyfill.io/v3/polyfill.min.js?features=Element.prototype.classList%2CMediaQueryList.prototype.addEventListener%2Cdocument.querySelector&flags=gated">
+    src="https://polyfill.io/v3/polyfill.min.js?features=es2015%2Ces6%2Cfetch%2CPromise%2CArray.prototype.includes&flags=gated">
   </script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <!-- <script src="https://babeljs.io/docs/en/babel-standalone"></script> -->
   <script src="js/index-babel.js" data-type="module" defer></script>
 </head>
 
