chg title, modify p margin

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="theme-color" content="#0099D8">
-  <meta name="title" content="Vanilla JS Word Lookup" />
-  <meta name="description" content="One-Click Dictionary Word Lookup Tooltips Demo" />
+  <meta name="title" content="Mashups Word Lookup - Tooltips Demo" />
+  <meta name="description" content="One-Click Instant Dictionary Word Lookup Tooltips Demo" />
   <meta name="language" content="EN-US" />
   <meta name="creator" content="John Chase - the Art of Tech, LLC" />
   <meta name="created" content="2022-03-29" />
-  <title>Vanilla JS Word Lookup</title>
+  <title>Mashups Word Lookup - Tooltips Demo</title>
   <link rel="icon" href="../../favicon.ico?v=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Roboto&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/6029e1b20c.js" crossorigin="anonymous"></script>
@@ -21,13 +21,13 @@
     src="https://polyfill.io/v3/polyfill.min.js?features=es2015%2Ces6%2Cfetch%2CPromise%2CArray.prototype.includes&flags=gated">
   </script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="js/index-babel.js" data-type="module" defer></script>
+  <script src="js/index.js" data-type="module" defer></script>
 </head>
 
 <body>
   <!--#include virtual="/includes/mashups-word-lookup-header.html"-->
   <main>
-    <h2>One-Click Dictionary Tooltips Mashup Demo</h2>
+    <h2>One-Click Instant Dictionary Tooltips Mashup Demo</h2>
     <div>
       <label class="switch">
         <span class="defs">Definitions</span>&nbsp;
